--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
     <h2>Contact Us</h2>
     <p>Email: <a href="mailto:altitudehouseconsultingllc@gmail.com">altitudehouseconsultingllc@gmail.com</a></p>
+    <p>Voice Mail/Text: <a href="tel:+14077921463">(407) 792-1463</a></p>
   </main>
 
   <footer>
