--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
     
     <h2>Gallery</h2>
     <div class="gallery">
-      <img src="images/room1.jpg" alt="Furnished Bedroom">
-      <img src="images/kitchen.jpg" alt="Shared Kitchen">
-      <img src="images/desk.jpg" alt="Workspace and TV">
-      <img src="images/bathroom.jpg" alt="Shared Bathroom">
+      <img src="images/bedroom.png" alt="Bedroom">
+      <img src="images/bathroom.png" alt="Bathroom">
+      <img src="images/kitchen.png" alt="Kitchen">
+      <img src="images/laundry.png" alt="Laundry">
+      <img src="images/commonarea.png" alt="Common Area">
+      <img src="images/backyard.jpg" alt="Backyard">
+    
       <!-- Add more images as needed -->
     </div>
 
