--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </header>
 
   <main>
-    <h2>Welcome to Your New Launchpad</h2>
+    <h2>Welcome Aviation Enthusiasts</h2>
     <p>
       Looking for affordable, all-inclusive housing near <strong>Sanford International Airport (SFB)</strong>? Our aviation rentals offer fully furnished private rooms just <strong>5 miles or less</strong> from the airport — ideal for flight students and aviation professionals.
     </p>
