--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <img src="images/bedroom.png" alt="Bedroom">
       <img src="images/bathroom.png" alt="Bathroom">
       <img src="images/kitchen.png" alt="Kitchen">
-      <img src="images/laundry.png" alt="Laundry">
+      <img src="images/laundryroom.png" alt="Laundry">
       <img src="images/commonarea.png" alt="Common Area">
       <img src="images/backyard.jpg" alt="Backyard">
     
