--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
     
     <h2>Gallery</h2>
     <div class="gallery">
-      <img src="images/bedroom.png" alt="Bedroom">
-      <img src="images/bathroom.png" alt="Bathroom">
-      <img src="images/kitchen.png" alt="Kitchen">
-      <img src="images/laundryroom.png" alt="Laundry">
-      <img src="images/commonarea.png" alt="Common Area">
-      <img src="images/backyard.jpg" alt="Backyard">
+      <img src="images/bedroom.PNG" alt="Bedroom">
+      <img src="images/bathroom.PNG" alt="Bathroom">
+      <img src="images/kitchen.PNG" alt="Kitchen">
+      <img src="images/laundryroom.PNG" alt="Laundry">
+      <img src="images/commonarea.PNG" alt="Common Area">
+      <img src="images/backyard.PNG" alt="Backyard">
     
       <!-- Add more images as needed -->
     </div>
