--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       color: #333;
     }
     header {
-      background: #003366;
-      color: white;
-      padding: 1em;
-      text-align: center;
+  background: white;
+  color: #003366; /* optional: keep text branded dark blue */
+  padding: 1em;
+  text-align: center;
     }
     main {
       padding: 2em;
