--- a/index.html
+++ b/index.html
@@ -75,13 +75,15 @@
     
     <h2>Gallery</h2>
     <div class="gallery">
-      <img src="images/bedroom.PNG" alt="Bedroom">
-      <img src="images/bathroom.PNG" alt="Bathroom">
-      <img src="images/kitchen.PNG" alt="Kitchen">
-      <img src="images/laundryroom.PNG" alt="Laundry">
+      <img src="images/bedroom.PNG" alt="Master Bedroom House 1">
+      <img src="images/bathroom.PNG" alt="Private Bathroom House 1">
+      <img src="images/kitchen.PNG" alt="Kitchen House 1">
+      <img src="images/laundryroom.PNG" alt="Laundry House 1">
       <img src="images/commonarea.PNG" alt="Common Area">
       <img src="images/backyard.PNG" alt="Backyard">
-    
+      <img src="images/Bathroom1.jpeg" alt="Shared Bathroom One">
+      <img src="images/Bathroom2.jpeg" alt="Shared Bathroom Two">
+      <img src="images/Laundry1.jpeg" alt="Laundry House 2">
       <!-- Add more images as needed -->
     </div>
 
