--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <img src="images/laundryroom.PNG" alt="Laundry House 1">
       <img src="images/commonarea.PNG" alt="Common Area">
       <img src="images/backyard.PNG" alt="Backyard">
-      <img src="images/Bathroom1.jpeg" alt="Shared Bathroom One">
-      <img src="images/Bathroom2.jpeg" alt="Shared Bathroom Two">
+      <img src="images/Bathroom1.JPEG" alt="Shared Bathroom One">
+      <img src="images/Bathroom2.JPEG" alt="Shared Bathroom Two">
       <img src="images/Laundry1.jpeg" alt="Laundry House 2">
       <!-- Add more images as needed -->
     </div>
