--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
     
     <h2>Gallery</h2>
     <div class="gallery">
-      <img src="images/bedroom.PNG" alt="Master Bedroom House 1">
-      <img src="images/bathroom.PNG" alt="Private Bathroom House 1">
-      <img src="images/kitchen.PNG" alt="Kitchen House 1">
-      <img src="images/laundryroom.PNG" alt="Laundry House 1">
-      <img src="images/commonarea.PNG" alt="Common Area">
-      <img src="images/backyard.PNG" alt="Backyard">
-      <img src="images/Bathroom1.JPEG" alt="Shared Bathroom One">
-      <img src="images/Bathroom2.JPEG" alt="Shared Bathroom Two">
+      <img src="images/bedroom.png" alt="Master Bedroom House 1">
+      <img src="images/bathroom.png" alt="Private Bathroom House 1">
+      <img src="images/kitchen.png" alt="Kitchen House 1">
+      <img src="images/laundryroom.png" alt="Laundry House 1">
+      <img src="images/commonarea.png" alt="Common Area">
+      <img src="images/backyard.png" alt="Backyard">
+      <img src="images/Bathroom1.jpeg" alt="Shared Bathroom One">
+      <img src="images/Bathroom2.jpeg" alt="Shared Bathroom Two">
       <img src="images/Laundry1.jpeg" alt="Laundry House 2">
       <!-- Add more images as needed -->
     </div>
