--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       <img src="images/laundryroom.png" alt="Laundry House 1">
       <img src="images/commonarea.png" alt="Common Area">
       <img src="images/backyard.png" alt="Backyard">
-      <img src="images/Bathroom1.jpeg" alt="Shared Bathroom One">
-      <img src="images/Bathroom2.jpeg" alt="Shared Bathroom Two">
-      <img src="images/Laundry1.jpeg" alt="Laundry House 2">
+      <img src="images/bathroom1.jpeg" alt="Shared Bathroom One">
+      <img src="images/bathroom2.jpeg" alt="Shared Bathroom Two">
+      <img src="images/laundry1.jpeg" alt="Laundry House 2">
       <!-- Add more images as needed -->
     </div>
 
