--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
       <img src="images/bedroom.png" alt="Master Bedroom House 1">
       <img src="images/bathroom.png" alt="Private Bathroom House 1">
       <img src="images/kitchen.png" alt="Kitchen House 1">
-      <img src="images/laundryroom.png" alt="Laundry House 1">
+      <img src="images/laundry1.png" alt="Laundry House 1">
       <img src="images/commonarea.png" alt="Common Area">
       <img src="images/backyard.png" alt="Backyard">
       <img src="images/bathroom1.jpeg" alt="Shared Bathroom One">
       <img src="images/bathroom2.jpeg" alt="Shared Bathroom Two">
-      <img src="images/laundry1.jpeg" alt="Laundry House 2">
+      <img src="images/laundry2.jpeg" alt="Laundry House 2">
       <!-- Add more images as needed -->
     </div>
 
