--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <img src="images/backyard.png" alt="Backyard">
       <img src="images/bathroom1.jpeg" alt="Shared Bathroom One">
       <img src="images/bathroom2.jpeg" alt="Shared Bathroom Two">
-      <img src="images/laundry2.jpg" alt="Laundry House 2">
+      <img src="images/laundry2.jpeg" alt="Laundry House 2">
       <!-- Add more images as needed -->
     </div>
   </main>
