--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <li style="margin-bottom: 0.75em;"><strong>All utilities and WiFi included</strong></li>
   <li style="margin-bottom: 0.75em;">Prices range from <strong>$850 to $950/month</strong></li>
   <li style="margin-bottom: 0.75em;"><strong>Month-to-month agreements</strong> for flexibility</li>
-  <li style="margin-bottom: 0.75em;"><strong>Refundable security deposit</strong> of half a month’s rent</li>
+  <li style="margin-bottom: 0.75em;"><strong>50% of monthly rent refundable security deposit</strong> security deposit required to hold space</li>
   <li style="margin-bottom: 0.75em;"><strong>30-day notice</strong> required for deposit refund</li>
   <li style="margin-bottom: 0.75em;"><strong>Renter’s insurance required</strong></li>
   <li style="margin-bottom: 0.75em;">Rent concessions may apply at manager’s discretion</li>
