--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <li style="margin-bottom: 0.75em;"><strong>50% of monthly rent refundable security deposit</strong> security deposit required to hold space</li>
   <li style="margin-bottom: 0.75em;"><strong>30-day notice</strong> required for deposit refund</li>
   <li style="margin-bottom: 0.75em;"><strong>Renter’s insurance required</strong></li>
-  <li style="margin-bottom: 0.75em;">Rent concessions may apply at manager’s discretion</li>
+  <li style="margin-bottom: 0.75em;">Rent concessions at manager’s discretion</li>
 </ul>
     
     <h2>Gallery</h2>
