--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
       <img src="images/bathroom1.jpeg" alt="Shared Bathroom One">
       <img src="images/bathroom2.jpeg" alt="Shared Bathroom Two">
       <img src="images/laundry2.jpeg" alt="Laundry House 2">
+      <img src="images/bed1.jpg" alt="Bedroom Image 1">
+      <img src="images/bed2.jpg" alt="Bedroom Image 2">
+      <img src="images/bed3.jpg" alt="Bedroom Image 3">
+      
       <!-- Add more images as needed -->
     </div>
   </main>
