--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <header>
     <h1>Altitude Aviation Rentals</h1>
-    <p>Furnished housing for aviation students, just minutes from Sanford International Airport</p>
+    <p>Furnished Housing for Aviation Students, Just Minutes from Sanford International Airport</p>
   </header>
 
   <main>
@@ -71,15 +71,15 @@
     <p>Voice Mail/Text: <a href="tel:+14077921463">(407) 792-1463</a></p>
     
 <ul style="list-style-position: inside; padding-left: 0;">
-  <li style="margin-bottom: 0.75em;">Private rooms with bed, desk, TV, and office chair</li>
-  <li style="margin-bottom: 0.75em;">Kitchenware, linens, and towels provided</li>
-  <li style="margin-bottom: 0.75em;"><strong>All utilities and WiFi included</strong></li>
-  <li style="margin-bottom: 0.75em;">Prices range from <strong>$850 to $950/month</strong></li>
-  <li style="margin-bottom: 0.75em;"><strong>Month-to-month agreements</strong> for flexibility</li>
-  <li style="margin-bottom: 0.75em;"><strong>50% of monthly rent refundable security deposit</strong> security deposit required to hold space</li>
-  <li style="margin-bottom: 0.75em;"><strong>30-day notice</strong> required for deposit refund</li>
-  <li style="margin-bottom: 0.75em;"><strong>Renter’s insurance required</strong></li>
-  <li style="margin-bottom: 0.75em;">Rent concessions at manager’s discretion</li>
+  <li style="margin-bottom: 0.75em;">Private Rooms with Bed, Desk, TV, and Office Chair</li>
+  <li style="margin-bottom: 0.75em;">Kitchenware, Linens, and Towels Avialable</li>
+  <li style="margin-bottom: 0.75em;"><strong>All Utilities and WiFi Included</strong></li>
+  <li style="margin-bottom: 0.75em;">Prices Range from <strong>$850-$950/month $64-$71/Day discounted weekly rates </strong></li>
+  <li style="margin-bottom: 0.75em;"><strong>Month-to-Month & Transient Aviator Agreements</strong> for Flexibility</li>
+  <li style="margin-bottom: 0.75em;"><strong>50% of Monthly Rent Received as Refundable Security Deposit</strong> </li>
+  <li style="margin-bottom: 0.75em;"><strong>30-day Notice</strong> Required for Deposit Refund</li>
+  <li style="margin-bottom: 0.75em;"><strong>Renter’s Insurance Required for Month to Month Tenants</strong></li>
+  <li style="margin-bottom: 0.75em;">Rent Concessions at Manager’s discretion</li>
 </ul>
     
     <h2>Gallery</h2>
