--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
   <header>
     <h1>Altitude Aviation Rentals</h1>
-    <p>Furnished Housing for Aviation Students, Just Minutes from Sanford International Airport</p>
-  </header>
+    <p>Furnished Communal Housing for Aviation Students and Faculty, Just Minutes from Sanford International Airport</p>
+    </header>
 
-  <main>
+    <main>
     <h2>Welcome Aviation Enthusiasts</h2>
 
 
@@ -74,7 +74,7 @@
   <li style="margin-bottom: 0.75em;">Private Rooms with Bed, Desk, TV, and Office Chair</li>
   <li style="margin-bottom: 0.75em;">Kitchenware, Linens, and Towels Avialable</li>
   <li style="margin-bottom: 0.75em;"><strong>All Utilities and WiFi Included</strong></li>
-  <li style="margin-bottom: 0.75em;">Prices Range from <strong>$850-$950/month $64-$71/Day discounted weekly rates </strong></li>
+  <li style="margin-bottom: 0.75em;">Prices Range from <strong>$850-$950/month $64-$71/day discounted weekly rates </strong></li>
   <li style="margin-bottom: 0.75em;"><strong>Month-to-Month & Transient Aviator Agreements</strong> for Flexibility</li>
   <li style="margin-bottom: 0.75em;"><strong>50% of Monthly Rent Received as Refundable Security Deposit</strong> </li>
   <li style="margin-bottom: 0.75em;"><strong>30-day Notice</strong> Required for Deposit Refund</li>
