--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     
     <p>
-      Looking for affordable, all-inclusive housing near <strong>Sanford International Airport (SFB)</strong>? Our aviation rentals offer fully furnished private rooms just <strong>5 miles or less</strong> from the airport — ideal for flight students and aviation professionals.
+      Looking for affordable, all-inclusive housing near <strong>Sanford International Airport (SFB)</strong>? Our aviation rentals offer fully furnished private rooms just <strong>5 miles or less</strong> from the SFB airport. Ideal for flight students and aviation professionals.
     </p>
 
     <h2>Contact Us</h2>
