--- a/index.html
+++ b/index.html
@@ -70,20 +70,20 @@
     <p>Email: <a href="mailto:altitudehouseconsultingllc@gmail.com">altitudehouseconsultingllc@gmail.com</a></p>
     <p>Voice Mail/Text: <a href="tel:+14077921463">(407) 792-1463</a></p>
     
-<ul style="list-style-position: inside; padding-left: 0;">
+  <ul style="list-style-position: inside; padding-left: 0;">
   <li style="margin-bottom: 0.75em;">Private Rooms with Bed, Desk, TV, and Office Chair</li>
   <li style="margin-bottom: 0.75em;">Kitchenware, Linens, and Towels Avialable</li>
   <li style="margin-bottom: 0.75em;"><strong>All Utilities and WiFi Included</strong></li>
-  <li style="margin-bottom: 0.75em;">Prices Range from <strong>$850-$950/month $64-$71/day discounted weekly rates </strong></li>
-  <li style="margin-bottom: 0.75em;"><strong>Month-to-Month & Transient Aviator Agreements</strong> for Flexibility</li>
-  <li style="margin-bottom: 0.75em;"><strong>50% of Monthly Rent Received as Refundable Security Deposit</strong> </li>
-  <li style="margin-bottom: 0.75em;"><strong>30-day Notice</strong> Required for Deposit Refund</li>
+  <li style="margin-bottom: 0.75em;"><strong>Month-to-Month & Transient Aviator Agreements</strong>for Flexibility</li>
+  <li style="margin-bottom: 0.75em;">Prices Range from <strong>$850-$950/month to month or $64-$71/daily</strong></li>
+  <li style="margin-bottom: 0.75em;"><strong>30-day Vacate Notice Required for Month to Month Agreements</strong></li>
+  <li style="margin-bottom: 0.75em;"><strong>Refundable Security Deposit</strong> </li>
   <li style="margin-bottom: 0.75em;"><strong>Renter’s Insurance Required for Month to Month Tenants</strong></li>
   <li style="margin-bottom: 0.75em;">Rent Concessions at Manager’s discretion</li>
-</ul>
+  </ul>
     
     <h2>Gallery</h2>
-    <div class="gallery">
+      <div class="gallery">
       <img src="images/bedroom.png" alt="Master Bedroom House 1">
       <img src="images/bathroom.png" alt="Private Bathroom House 1">
       <img src="images/kitchen.png" alt="Kitchen House 1">
