--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <h2>Contact Us</h2>
     <p>Email: <a href="mailto:altitudehouseconsultingllc@gmail.com">altitudehouseconsultingllc@gmail.com</a></p>
-    <p>Voice Mail/Text: <a href="tel:+14077921463">(407) 792-1463</a></p>
+    <p>Voice Mail/Text: <a href="tel:+14077921463">(407) 792-1463 or (770) 722-2479</a></p>
     
   <ul style="list-style-position: inside; padding-left: 0;">
   <li style="margin-bottom: 0.75em;">Private Rooms with Bed, Desk, TV, and Office Chair</li>
