--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <header>
     <h1>Altitude Aviation Rentals</h1>
-    <p>Furnished Communal Housing for Aviation Students and Faculty, Just Minutes from Sanford International Airport</p>
+    <p>Furnished Communal Housing for Aviation Students and Faculty. Minutes from Sanford International Airport</p>
     </header>
 
     <main>
