--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <li><strong>Renter’s Insurance Required for Month to Month Tenants</strong></li>
       <li>Rent Concessions at Manager’s discretion</li>
     </ul>
-    
+ <hr> <!-- Insert Here -->   
     <h2>Gallery</h2>
     <div class="gallery">
       <img src="images/bedroom.png" alt="Master Bedroom House 1">
@@ -42,6 +42,8 @@
       <img src="images/kitchen.png" alt="Kitchen House 1">
       <img src="images/laundry1.png" alt="Laundry House 1">
       <img src="images/commonarea.png" alt="Common Area">
+ <hr> <!-- Insert Here -->  
+      <h2>Gallery</h2>
       <img src="images/backyard.png" alt="Backyard">
       <img src="images/bathroom1.jpeg" alt="Shared Bathroom One">
       <img src="images/bathroom2.jpeg" alt="Shared Bathroom Two">
