--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <li>Kitchenware, Linens, and Towels Available</li>
       <li><strong>All Utilities and WiFi Included</strong></li>
       <li><strong>Month-to-Month & Transient Aviator Agreements</strong> for Flexibility</li>
-      <li>Prices Range from <strong>$850-$950/month to month or $64-$71/daily</strong></li>
+      <li><strong>Prices Range from $850-$950/month to month or $64-$71/daily</strong></li>
       <li><strong>30-day Vacate Notice Required for Month to Month Agreements</strong></li>
       <li><strong>Refundable Security Deposit</strong></li>
       <li><strong>Renter’s Insurance Required for Month to Month Tenants</strong></li>
-      <li>Rent Concessions at Manager’s discretion</li>
+      <li><strong><i>Rent Concessions at Manager’s discretion</i></strong></li>
     </ul>
  <hr> <!-- Insert Here -->   
     <h2>Gallery</h2>
