--- a/index.html
+++ b/index.html
@@ -34,16 +34,18 @@
       <li><strong>Renter’s Insurance Required for Month to Month Tenants</strong></li>
       <li><strong><i>Rent Concessions at Manager’s discretion</i></strong></li>
     </ul>
- <hr> <!-- Insert Here -->   
-    <h2>Gallery</h2>
-    <div class="gallery">
+ 
+      <hr> <!-- Insert Here -->   
+      <h2>Celery Ave</h2>
+      <div class="gallery">
       <img src="images/bedroom.png" alt="Master Bedroom House 1">
       <img src="images/bathroom.png" alt="Private Bathroom House 1">
       <img src="images/kitchen.png" alt="Kitchen House 1">
       <img src="images/laundry1.png" alt="Laundry House 1">
       <img src="images/commonarea.png" alt="Common Area">
- <hr> <!-- Insert Here -->  
-      <h2>Gallery</h2>
+ 
+      <hr> <!-- Insert Here -->  
+      <h2>Mellonville Ave</h2>
       <img src="images/backyard.png" alt="Backyard">
       <img src="images/bathroom1.jpeg" alt="Shared Bathroom One">
       <img src="images/bathroom2.jpeg" alt="Shared Bathroom Two">
