--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Altitude Aviation Rentals</title>
   <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
+  </head>
+  <body>
 
-  <header>
-    <h1>Altitude Aviation Rentals</h1>
-    <p>Furnished Communal Housing for Aviation Students and Faculty. Minutes from Sanford International Airport</p>
-  </header>
+<header>
+  <h1>Altitude Aviation Rentals</h1>
+  <p>Furnished Communal Housing for Aviation Students and Faculty. Minutes from Sanford International Airport</p>
+ </header>
 
   <main>
-    <h2>Welcome Aviation Enthusiasts</h2>
-    <p>
-      Looking for affordable, all-inclusive housing near <strong>Sanford International Airport (SFB)</strong>? Our aviation rentals offer fully furnished private rooms just <strong>5 miles or less</strong> from the SFB airport. Ideal for flight students and aviation professionals.
-    </p>
+  <h2>Welcome Aviation Enthusiasts</h2>
+  <p>
+  Looking for affordable, all-inclusive housing near <strong>Sanford International Airport (SFB)</strong>? Our aviation rentals offer fully furnished private rooms just <strong>5 miles or less</strong> from the SFB airport. Ideal for flight students and aviation professionals.
+  </p>
 
     <h2>Contact Us</h2>
     <p>Email: <a href="mailto:altitudehouseconsultingllc@gmail.com">altitudehouseconsultingllc@gmail.com</a></p>
@@ -37,15 +37,16 @@
  
       <hr> <!-- Insert Here -->   
       <h2>Celery Ave</h2>
-      <div class="gallery">
+    <div class="gallery">
       <img src="images/bedroom.png" alt="Master Bedroom House 1">
       <img src="images/bathroom.png" alt="Private Bathroom House 1">
       <img src="images/kitchen.png" alt="Kitchen House 1">
       <img src="images/laundry1.png" alt="Laundry House 1">
       <img src="images/commonarea.png" alt="Common Area">
- 
+    </div>
       <hr> <!-- Insert Here -->  
       <h2>Mellonville Ave</h2>
+    <div class="gallery">
       <img src="images/backyard.png" alt="Backyard">
       <img src="images/bathroom1.jpeg" alt="Shared Bathroom One">
       <img src="images/bathroom2.jpeg" alt="Shared Bathroom Two">
