--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <li>Private Rooms with Bed, Desk, TV, and Office Chair</li>
       <li>Kitchenware, Linens, and Towels Available</li>
       <li><strong>All Utilities and WiFi Included</strong></li>
-      <li><strong>Month-to-Month & Transient Aviator Agreements</strong> for Flexibility</li>
+      <li><strong>Month-to-Month & Transient Aviator Agreements</strong></li>
       <li><strong>Prices Range from $850-$950/month to month or $64-$71/daily</strong></li>
       <li><strong>30-day Vacate Notice Required for Month to Month Agreements</strong></li>
       <li><strong>Refundable Security Deposit</strong></li>
