--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <p>Voice Mail/Text: <a href="tel:+14077921463">(407) 792-1463 or (770) 722-2479</a></p>
     
     <ul class="features">
-      <li>Private Rooms with Bed, Desk, TV, and Office Chair</li>
-      <li>Kitchenware, Linens, and Towels Available</li>
-      <li><strong>All Utilities and WiFi Included</strong></li>
-      <li><strong>Month-to-Month & Transient Aviator Agreements</strong></li>
-      <li><strong>Prices Range from $850-$950/month to month or $64-$71/daily</strong></li>
-      <li><strong>30-day Vacate Notice Required for Month to Month Agreements</strong></li>
-      <li><strong>Refundable Security Deposit</strong></li>
-      <li><strong>Renter’s Insurance Required for Month to Month Tenants</strong></li>
+      <li><strong><i>Private Rooms with Bed, Desk, TV, and Office Chair</i></strong></li>
+      <li><strong><i>Kitchenware, Linens, and Towels Available</i></strong></li>
+      <li><strong><i>All Utilities and WiFi Included</i></strong></li>
+      <li><strong><i>Month-to-Month & Transient Aviator Agreements</i></strong></li>
+      <li><strong><i>Prices Range from $850-$950/month to month or $64-$71/daily</i></strong></li>
+      <li><strong><i>30-day Vacate Notice Required for Month to Month Agreements</i></strong></li>
+      <li><strong><i>Refundable Security Deposit</i></strong></li>
+      <li><strong><i>Renter’s Insurance Required for Month to Month Tenants</i></strong></li>
       <li><strong><i>Rent Concessions at Manager’s discretion</i></strong></li>
     </ul>
  
