--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
   <h2>Welcome Aviation Enthusiasts</h2>
   <p>
-  Looking for affordable, all-inclusive housing near <strong>Sanford International Airport (SFB)</strong>? Our aviation rentals offer fully furnished private rooms just <strong>5 miles or less</strong> from the SFB airport. Ideal for flight students and aviation professionals.
+  Looking for affordable, all-inclusive housing near <strong>Sanford International Airport (SFB)</strong>? Aspiring Aviators and Aviation Professional fully furnished communal rentals just 5 miles or less from the SFB airport.
   </p>
 
     <h2>Contact Us</h2>
