--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
       <hr> <!-- Insert Here -->   
       <h2>Celery Ave</h2>
     <div class="gallery">
-      <img src="images/bedroom.png" alt="Master Bedroom House 1">
-      <img src="images/bathroom.png" alt="Private Bathroom House 1">
-      <img src="images/kitchen.png" alt="Kitchen House 1">
-      <img src="images/laundry1.png" alt="Laundry House 1">
-      <img src="images/commonarea.png" alt="Common Area">
+      <img src="images/bella_backyard.png" alt="Celery Backyard">
+      <img src="images/bella_bathroom_master.png" alt="Celery Master Bath">
+      <img src="images/bella_bedroom_master.png" alt="Celery Master">
+      <img src="images/bella_kitchen.png" alt="Celery Kitchen">
+      <img src="images/bella_common_area.png" alt="Celery Common">
     </div>
       <hr> <!-- Insert Here -->  
       <h2>Mellonville Ave</h2>
