--- a/index.html
+++ b/index.html
@@ -38,12 +38,32 @@
       <hr> <!-- Insert Here -->   
       <h2>Celery Ave</h2>
     <div class="gallery">
-      <img src="images/bella_backyard.png" alt="Celery Backyard">
-      <img src="images/bella_bathroom_master.png" alt="Celery Master Bath">
-      <img src="images/bella_bedroom_master.png" alt="Celery Master">
-      <img src="images/bella_kitchen.png" alt="Celery Kitchen">
-      <img src="images/bella_common_area.png" alt="Celery Common">
-    </div>
+
+  <figure>
+    <img src="images/bella_bedroom_master.png" alt="Celery Master Bedroom">
+    <figcaption>Master Bedroom $950.00</figcaption>
+  </figure>
+
+  <figure>
+    <img src="images/bella_bathroom_master.png" alt="Celery Master Bath">
+    <figcaption>Master Bathroom</figcaption>
+  </figure>
+      
+  <figure>
+    <img src="images/bella_backyard.png" alt="Celery Backyard">
+    <figcaption>Backyard</figcaption>
+  </figure>
+  
+  <figure>
+     <img src="images/bella_kitchen.png" alt="Celery Kitchen">
+    <figcaption>Kitchen</figcaption>
+  </figure>
+ 
+  <figure>
+    <img src="images/bella_common_area.png" alt="Celery Common Area">
+    <figcaption>Common Area</figcaption>
+  </figure>
+  </div>
       <hr> <!-- Insert Here -->  
       <h2>Mellonville Ave</h2>
     <div class="gallery">
