--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <figure>
     <img src="images/bella_bedroom_master.png" alt="Celery Master Bedroom">
-    <figcaption>Master Bedroom $950.00</figcaption>
+    <figcaption>Master Bedroom $950.00<strong> Available</strong></figcaption>
   </figure>
 
   <figure>
