--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  </header>
 
   <main>
-  <h2>Welcome Aviation Enthusiasts</h2>
+  <h2>Welcome Aviation Enthusiasts!!!</h2>
   <p>
   Looking for affordable, all-inclusive housing near <strong>Sanford International Airport (SFB)</strong>? Aspiring Aviators and Aviation Professional fully furnished communal rentals just 5 miles or less from the SFB airport.
   </p>
@@ -41,7 +41,7 @@
 
   <figure>
     <img src="images/bella_bedroom_master.png" alt="Celery Master Bedroom">
-    <figcaption>Master Bedroom $950.00<strong> Available</strong></figcaption>
+    <figcaption>Master Bedroom $950.00<strong> <i>Available</i></strong></figcaption>
   </figure>
 
   <figure>
@@ -66,7 +66,7 @@
   </div>
       <hr> <!-- Insert Here -->  
       <h2>Mellonville Ave</h2>
-    <div class="gallery">
+   <div class="gallery">
       <img src="images/backyard.png" alt="Backyard">
       <img src="images/bathroom1.jpeg" alt="Shared Bathroom One">
       <img src="images/bathroom2.jpeg" alt="Shared Bathroom Two">
