--- a/index.html
+++ b/index.html
@@ -38,50 +38,55 @@
       <hr> <!-- Insert Here -->   
       <h2>Celery Ave</h2>
     <div class="gallery">
+
+  <figure>
+    <img src="images/home.png" alt="">
+    <figcaption>House</figcaption>
+  </figure>
       
   <figure>
-    <img src="images/bella_backyard.png" alt="Celery Backyard">
+    <img src="images/bella_backyard.png" alt="">
     <figcaption>Backyard</figcaption>
   </figure>
   
   <figure>
-     <img src="images/bella_kitchen.png" alt="Celery Kitchen">
+     <img src="images/bella_kitchen.png" alt="">
     <figcaption>Kitchen</figcaption>
   </figure>
  
   <figure>
-    <img src="images/bella_common_area.png" alt="Celery Common Area">
+    <img src="images/bella_common_area.png" alt="">
     <figcaption>Common Area</figcaption>
   </figure>
   </div>
 
   <figure>
-    <img src="images/bella_bedroom_master.png" alt="Celery Master Bedroom">
+    <img src="images/bella_bedroom_master.png" alt="">
     <figcaption>Master Bedroom $950.00<strong> <i>Available</i></strong></figcaption>
   </figure>
 
   <figure>
-    <img src="images/bella_bathroom_master.png" alt="Celery Master Bath">
+    <img src="images/bella_bathroom_master.png" alt="">
     <figcaption>Master Bathroom</figcaption>
   </figure>
 
   <figure>
-    <img src="images/bella_bedroom_one.png" alt="Celery Bedroom A">
+    <img src="images/bella_bedroom_one.png" alt="">
     <figcaption>Bedroom A $875.00<strong><i>Occupied</i></strong></figcaption>
   </figure>
 
   <figure>
-    <img src="images/bella_bedroom_two.png" alt="Celery Bedroom B">
+    <img src="images/bella_bedroom_two.png" alt="">
     <figcaption>Bedroom B 875.00 <strong><i>Available Late August/September 1st</i></strong></figcaption>
   </figure>
 
   <figure>
-    <img src="images/bella_bedroom_three.png" alt="Celery Bedroom C">
+    <img src="images/bella_bedroom_three.png" alt="">
     <figcaption>Bedroom C $875.00<strong> <i>Available Late August/September 1st</i></strong></figcaption>
   </figure>
 
   <figure>
-    <img src="images/bella_shared_bathroom.png" alt="Celery Shared Bath">
+    <img src="images/bella_shared_bathroom.png" alt="">
     <figcaption>Shared Bathroom</figcaption>
   </figure>
 
