--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
   <figure>
     <img src="images/bella_bedroom_two.png" alt="">
-    <figcaption>Bedroom B 875.00 <strong><i>Available Late August/September 1st</i></strong></figcaption>
+    <figcaption>Bedroom B 875.00 <strong><i>Available</i></strong></figcaption>
   </figure>
 
   <figure>
     <img src="images/bella_bedroom_three.png" alt="">
-    <figcaption>Bedroom C $875.00<strong> <i>Available Late August/September 1st</i></strong></figcaption>
+    <figcaption>Bedroom C $875.00<strong> <i>Available</i></strong></figcaption>
   </figure>
 
   <figure>
@@ -132,7 +132,7 @@
      
   <figure>
     <img src="images/mellon_bedroom_three.png" alt="">
-    <figcaption>Bedroom D 875.00<strong><i>Occupied</i></strong></figcaption>
+    <figcaption>Bedroom D 875.00<strong><i>Available</i></strong></figcaption>
   </figure>
      
   <figure>
