--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <figure>
     <img src="images/bella_bathroom_master.png" alt="">
-    <figcaption>Bathroom</figcaption>
+    <figcaption>Bathroom Private</figcaption>
   </figure>
 
   <figure>
@@ -82,7 +82,7 @@
 
   <figure>
     <img src="images/bella_bedroom_three.png" alt="">
-    <figcaption>Bedroom $875.00<strong> <i> Available</i></strong></figcaption>
+    <figcaption>Bedroom $875.00<strong><i> Available</i></strong></figcaption>
   </figure>
 
   <figure>
