--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
      
   <figure>
     <img src="images/mellon_sharedbath.png" alt="">
-    <figcaption>Shared Bath Occupied</figcaption>
+    <figcaption>Shared Bath One</figcaption>
   </figure>
 
   <figure>
     <img src="images/mellon_sharedbath.png" alt="">
-    <figcaption>Shared Bath<strong><i> Occupied</i></strong></figcaption>
+    <figcaption>Shared Bath Two</figcaption>
   </figure>
 
      
