--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </figure>
 
   <figure>
-    <img src="images/bella_laundry.png" alt="">
+    <img src="images/bella_laundry.PNG" alt="">
     <figcaption>Laundry</figcaption>
   </figure>
  
