--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
    <div class="gallery">
   
    <figure>
-    <img src="images/mellon_backyard.png" alt="">
+    <img src="images/mellon_backyard.PNG" alt="">
     <figcaption>Backyard</figcaption>
   </figure>
 
