--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </figure>
 
   <figure>
-    <img src="images/bella_shared_bathroom.png" alt="">
+    <img src="images/bella_bathroom_shared.PNG" alt="">
     <figcaption>Shared Bathroom</figcaption>
   </figure>
      </div>
