--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </figure>
 
   <figure>
-    <img src="images/bella_laundry.PNG" alt="">
+    <img src="images/bella_laundry.png" alt="">
     <figcaption>Laundry</figcaption>
   </figure>
  
@@ -95,7 +95,7 @@
    <div class="gallery">
   
    <figure>
-    <img src="images/mellon_backyard.PNG" alt="">
+    <img src="images/mellon_backyard.png" alt="">
     <figcaption>Backyard</figcaption>
   </figure>
 
