--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
      
 
   <figure>
-    <img src="images/mellon_bedroom_three.png" alt="">
+    <img src="images/mellon_bedroom_three.PNG" alt="">
     <figcaption>Bedroom $900.00 Occupied</figcaption>
   </figure>
      
