--- a/index.html
+++ b/index.html
@@ -24,6 +24,27 @@
     <title>Altitude Aviation Rentals — Student Housing & Short‑Stay Rooms</title>
     <meta name="description" content="Private rooms for aviation students and short‑stay flight trainees. Clean, quiet, fully furnished, utilities & Wi‑Fi included." />
 
+    <!-- ================= Reviews ================= -->
+<section id="reviews" aria-labelledby="reviews-h" style="padding:3.2rem 0;">
+  <div class="container">
+    <span class="tag">What guests say</span>
+    <h2 id="reviews-h">Google reviews</h2>
+    <p class="sub">Real feedback from trainees and instructors.</p>
+
+    <!-- Reviews container -->
+    <div id="reviewsGrid"
+         style="display:grid;grid-template-columns:repeat(3,1fr);gap:1rem;margin-top:1.2rem;">
+      <!-- JS will inject review cards here -->
+    </div>
+
+    <!-- Fallback link -->
+    <div style="margin-top:1rem;">
+      <a class="btn btn-outline" id="reviewsLink" href="#" target="_blank" rel="noopener">
+        Read more on Google
+      </a>
+    </div>
+  </div>
+</section>
     <!-- ========== Brand & Theme Variables ========== -->
     <style>
       :root{
