--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <!-- Room 1 -->
           <article class="card" role="listitem">
             <div class="media">
-              <img loading="lazy" src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?q=80&w=1200&auto=format&fit=crop" alt="Bright bedroom with desk and queen bed" />
+              <img loading="lazy" src="" alt="Bright bedroom with desk and queen bed" />
             </div>
             <div class="body">
               <span class="pill">Standard Room</span>
