--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <div class="container">
         <span class="tag">Rooms</span>
         <h2 id="rooms-h">Private rooms designed for focus and rest.</h2>
-        <p class="sub">Fully furnished rooms with study desks, blackout curtains, clean linens, and shared access to stocked kitchens and laundry.</p>
+        <p class="sub">Fully furnished rooms with study desks, clean linens, and shared access to stocked kitchen and laundry.</p>
         <div class="grid" role="list">
           <!-- Room 1 -->
           <article class="card" role="listitem">
@@ -242,7 +242,7 @@
             </div>
             <div class="body">
               <span class="pill">Standard Room</span>
-              <h3>Queen Bed + Desk</h3>
+              <h3>Queen Bed + Desk + Television</h3>
               <p>Comfortable queen bed, workspace, dresser, and closet. Fresh linens and weekly common‑area cleaning.</p>
             </div>
           </article>
@@ -254,13 +254,13 @@
             <div class="body">
               <span class="pill">Quiet Corner</span>
               <h3>Study‑Focused Layout</h3>
-              <p>Blackout curtains, lamp lighting, and ergonomic chair for late‑night ground school prep.</p>
+              <p>lamp lighting, and office chair for late‑night ground school prep.</p>
             </div>
           </article>
           <!-- Room 3 -->
           <article class="card" role="listitem">
             <div class="media">
-              <img loading="lazy" src="https://images.unsplash.com/photo-1493809842364-78817add7ffb?q=80&w=1200&auto=format&fit=crop" alt="Cozy room with clean bedding and storage" />
+              <img loading="lazy" src="" alt="Cozy room with clean bedding and storage" />
             </div>
             <div class="body">
               <span class="pill">Premium</span>
