--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
           </article>
           <article class="card" role="listitem">
             <div class="media">
-              <img src="https://images.unsplash.com/photo-1581093588401-a97c4b585fa7?q=80&w=1200&auto=format&fit=crop" alt="High‑speed Wi‑Fi router" />
+              <img src="" alt="High‑speed Wi‑Fi router" />
             </div>
             <div class="body">
               <span class="pill">Connectivity</span>
@@ -321,8 +321,8 @@
         <p class="sub">We continuously improve our spaces to support focused study and solid rest. Drag the slider to compare.</p>
         <div class="ba-wrap">
           <div class="ba-box" aria-label="Before and after comparison">
-            <img class="ba-before" src="https://images.unsplash.com/photo-1503387762-592deb58ef4e?q=80&w=1600&auto=format&fit=crop" alt="Before: older desk setup" />
-            <img class="ba-after"  src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?q=80&w=1600&auto=format&fit=crop" alt="After: modern desk with lamp and chair" />
+            <img class="ba-before" src="" />
+            <img class="ba-after"  src="" alt="After: modern desk with lamp and chair" />
             <div class="ba-handle" aria-hidden="true"></div>
             <div class="ba-labels"><span class="pill" aria-hidden="true">Before</span><span class="pill" aria-hidden="true">After</span></div>
             <div class="ba-slider" aria-hidden="true"><input id="baRange" type="range" min="0" max="100" value="50" aria-label="Reveal after image" /></div>
@@ -354,19 +354,19 @@
         </div>
         <div class="gallery" id="galleryGrid">
           <figure data-cat="interior">
-            <img loading="lazy" src="https://images.unsplash.com/photo-1501045661006-fcebe0257c3f?q=80&w=1200&auto=format&fit=crop" alt="Kitchen with modern appliances" />
+            <img loading="lazy" src="" alt="Kitchen with modern appliances" />
             <figcaption>Shared kitchen — stocked & clean</figcaption>
           </figure>
           <figure data-cat="interior">
-            <img loading="lazy" src="https://images.unsplash.com/photo-1505692794403-34d4982f88aa?q=80&w=1200&auto=format&fit=crop" alt="Room with desk and bed" />
+            <img loading="lazy" src="" alt="Room with desk and bed" />
             <figcaption>Standard room — queen bed + desk</figcaption>
           </figure>
           <figure data-cat="shared">
-            <img loading="lazy" src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?q=80&w=1200&auto=format&fit=crop" alt="Living room with couch and TV" />
+            <img loading="lazy" src="" alt="Living room with couch and TV" />
             <figcaption>Common area — quiet study hours</figcaption>
           </figure>
           <figure data-cat="neighborhood">
-            <img loading="lazy" src="https://images.unsplash.com/photo-1517976487492-576ea6b2936b?q=80&w=1200&auto=format&fit=crop" alt="Runway with small aircraft" />
+            <img loading="lazy" src="" alt="Runway with small aircraft" />
             <figcaption>Nearby training field — short drive*</figcaption>
           </figure>
         </div>
@@ -439,14 +439,14 @@
           <figure class="quote" role="listitem">
             <p>“Month‑to‑month made it easy during my instrument training. Quiet hours respected.”</p>
             <figcaption class="avatar">
-              <img src="https://images.unsplash.com/photo-1531123897727-8f129e1688ce?q=80&w=256&auto=format&fit=crop" alt="Guest portrait" />
+              <img src="" alt="Guest portrait" />
               <div><div class="name">Morgan S.</div><div class="role">Instrument rating</div></div>
             </figcaption>
           </figure>
           <figure class="quote" role="listitem">
             <p>“Straightforward, responsive, and professional. Would stay again for checkride prep.”</p>
             <figcaption class="avatar">
-              <img src="https://images.unsplash.com/photo-1511367461989-f85a21fda167?q=80&w=256&auto=format&fit=crop" alt="Guest portrait" />
+              <img src="" alt="Guest portrait" />
               <div><div class="name">Jamie L.</div><div class="role">CFI candidate</div></div>
             </figcaption>
           </figure>
