--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- Fallback link -->
     <div style="margin-top:1rem;">
-      <a class="btn btn-outline" id="reviewsLink" href="#" target="_blank" rel="noopener">
+      <a class="btn btn-outline" id="https://share.google/mo3TNOXUu2PHMTUBG" href="#" target="_blank" rel="noopener">
         Read more on Google
       </a>
     </div>
