--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
 
     <!-- Fallback link -->
     <div style="margin-top:1rem;">
-      <a class="btn btn-outline" id="https://share.google/mo3TNOXUu2PHMTUBG" href="#" target="_blank" rel="noopener">
-        Read more on Google
-      </a>
+     <a
+  class="btn btn-outline"
+  id="reviewsLink"
+  href="https://share.google/mo3TNOXUu2PHMTUBG"
+  target="_blank"
+  rel="noopener"
+>
+  Read our Google reviews
+</a>
     </div>
   </div>
 </section>
